--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cy:run": "cypress run"
   },
   "keywords": [
-    "testing",   
+    "testing",
     "cypress",
     "automation"
   ],
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^7.4.0",
+    "cypress-xpath": "^1.6.2",
     "prettier": "^2.3.0"
   }
 }
